--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ent": "^2.2.0",
+    "express": "^4.15.2",
     "express-session": "^1.15.6",
-    "nodemon": "^1.18.10"
+    "moment": "^2.24.0",
+    "mysql": "^2.16.0",
+    "nodemon": "^1.18.10",
+    "socket.io": "^2.2.0"
   }
 }
